2012-12-28  Russ Allbery  <rra@stanford.edu>

	* t/pod-coverage.t: New test for POD coverage.

	* ANSIColor.pm: Add use warnings.
	* Makefile.PL: Add use strict and use warnings.
	* t/strict.t: New test for strict and warnings in all code.

	* t/pod.t: Update coding style.
	* t/pod-spelling.t: Use Test::Spelling instead of including a
	less-tested version of the same code.  Update coding style.

2012-03-18  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 3.02 released.

	* ANSIColor.pm (AUTOLOAD): Only return pass-through behavior if
	the function that was called was one of our constants, rather than
	turning every unknown function in the Term::ANSIColor namespace
	into a passthrough join function when colors are disabled.
	* t/basic.t: Test proper error reporting with colors disabled.

	* ANSIColor.pm (AUTOLOAD): Preserve an existing value of $@ when
	generating a constant sub and restore it afterwards.  Diagnose
	errors in creating the constant sub and die instead of ignoring
	them.
	* t/eval.t: New test for $@ preservation.

	* ANSIColor.pm: Add italic and the ITALIC constant.  Document that
	the support for it is rare.
	* t/basic.t: Test italic and ITALIC support.

	* ANSIColor.pm: Add "mistyped" as a stopword, required by the
	latest aspell on Debian.

2011-07-20  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 3.01 released.

	* Makefile.PL: Change the DISTNAME to Term-ANSIColor.

	* ANSIColor.pm (colored): Only interpret an initial array
	reference as a list of colors, not any initial reference, allowing
	the colored function to work properly on objects with
	stringification defined.  Thanks, Revilo Reegiles.
	* t/stringify.t: New test for proper behavior with non-array
	references in colored.

2011-03-13  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Fix two syntax errors in the SYNOPSIS.  Thanks,
	Jan Hartung.

2010-10-08  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Warn in the documentation that attributes are not