@@ -59,11 +59,12 @@ REQUIREMENTS
   The test suite requires Perl 5.6 or later and the Test::More module.  To
   check the POD documentation, Test::Pod and Test::Pod::Coverage are also
   required.  To check for use strict and use warnings, Test::Strict is
-  also required.  To check spelling, Test::Spelling and its dependencies,
-  including a spell-checking program, are required.  Spelling tests are
-  disabled by default since spelling dictionaries differ too much between
-  systems.  To enable those tests, set RRA_MAINTAINER_TESTS to a true
-  value.
+  also required.  To check the minimum required version of Perl,
+  Test::MinimumVersion is also required.  To check spelling,
+  Test::Spelling and its dependencies, including a spell-checking program,
+  are required.  Spelling tests are disabled by default since spelling
+  dictionaries differ too much between systems.  To enable those tests,
+  set RRA_MAINTAINER_TESTS to a true value.
 
 INSTALLATION
 
