@@ -1,5 +1,8 @@
 2012-12-28  Russ Allbery  <rra@stanford.edu>
 
+	* t/minimum-version.t: New test for the minimum required version
+	of Perl.
+
 	* t/pod-coverage.t: New test for POD coverage.
 
 	* ANSIColor.pm: Add use warnings.
